--- a/css/styles.css
+++ b/css/styles.css
@@ -76,3 +76,62 @@ Button {
     Outline: 2px solid red;
     Outline-offset: -2px;
 }
+
+
+
+/**
+  |============================
+  | Main
+  |============================
+*/
+.modal-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+   
+}
+.btn-modal {
+    border: 1px solid rgb(193, 192, 192);
+    border-radius: 25px;
+    padding: 25px;
+
+    transition: color 1000ms ease-in-out, background-color 1000ms ease-in-out;
+
+    animation: shake-horizontal 6s cubic-bezier(0.455, 0.03, 0.515, 0.955) 3s infinite both;
+}
+
+.btn-modal:hover,
+.btn-modal:focus {
+    border: 1px solid rgb(29, 27, 27);
+    border-radius: 25px;
+    background-color: brown;
+    color: white;
+
+    animation-play-state: running;
+}
+
+@keyframes shake-horizontal {
+    0%,
+    20% {
+      transform: translateX(0);
+    }
+    2%,
+    6%,
+    10%,
+    14% {
+      transform: translateX(-10px);
+    }
+    4%,
+    8%,
+    12% {
+      transform: translateX(10px);
+    }
+    16% {
+      transform: translateX(8px);
+    }
+    18% {
+      transform: translateX(-8px);
+    }
+  }
