--- a/css/styles.css
+++ b/css/styles.css
@@ -135,3 +135,242 @@ Button {
       transform: translateX(-8px);
     }
   }
+
+
+  /**
+  |============================
+  | Modal styles
+  |============================
+*/
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(17, 19, 25, 0.2);
+    backdrop-filter: blur(4px);
+
+    opacity: 1;
+    visibility: visible;
+    pointer-events: initial;
+
+    transition: opacity 200ms ease, visibility 200ms ease, backdrop-filter 200ms ease;
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    backdrop-filter: blur(0);
+
+    transition-delay: 400ms;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(0) scale(1);
+    opacity: 1;
+
+    width: 450px;
+    min-height: 550px;
+    padding: 24px;
+
+    background-color: rgb(1, 173, 118);
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+
+    transition: transform 400ms ease-in 200ms, opacity 400ms ease-in 200ms;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) rotate(360deg) scale(0.2);
+    opacity: 0;
+}
+
+.modal-close-btn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+
+    color: white;
+
+    background-color: var(--secondary-bg-cl);
+    border-radius: 50%;
+    border: none;
+
+    cursor: pointer;
+
+    transition: var(--anim-fast);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+    color: black;
+}
+
+.modal-title {
+    display: block;
+    margin-bottom: 14px;
+
+    font-size: 16px;
+    text-align: center;
+}
+
+.modal-form-label {
+    display: block;
+    margin-bottom: 6px;
+    font-size: 12px;
+
+    transition: var(--anim-fast);
+}
+
+.modal-form-field {
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.modal-form-input {
+    width: 100%;
+    height: 46px;
+    padding: 0 38px;
+
+    border: 1px solid var(--main-bg-cl);
+    border-radius: 6px;
+    outline: 2px solid transparent;
+    outline-offset: -2px;
+
+    transition: var(--anim-fast);
+}
+
+.modal-form-input:focus {
+    outline-color: var(--main-svg-cl);
+    box-shadow: 0 0 0 4px rgba(11, 101, 76, 0.124);
+}
+
+.modal-form-icon {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+
+    transform: translateY(-50%);
+
+    transition: var(--anim-fast);
+    pointer-events: none;
+}
+
+.modal-form-input:focus+.modal-form-icon {
+    fill: var(--main-svg-cl);
+}
+
+.modal-form-message {
+    margin-bottom: 20px;
+
+    display: block;
+    width: 100%;
+    min-height: 120px;
+    max-height: 180px;
+    padding: 10px;
+
+    font-size: 12px;
+    border: 1px solid var(--main-bg-cl);
+    border-radius: 6px;
+    outline: 2px solid transparent;
+    outline-offset: -2px;
+
+    transition: var(--anim-fast);
+
+    resize: vertical;
+    /* resize: none; */
+}
+
+.modal-form-message::placeholder {
+    color: #9da4bd;
+}
+
+.modal-form-message:focus {
+    outline-color: var(--main-svg-cl);
+    box-shadow: 0 0 0 4px hwb(163 4% 60% / 0.124);
+}
+
+.modal-form-agreement {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+
+    margin-bottom: 20px;
+}
+
+.modal-form-agreement-box {
+    appearance: none;
+    width: 18px;
+    height: 18px;
+
+    border: 2px solid white;
+    border-radius: 2px;
+
+    background-image: url("data:image/svg+xml,%3Csvg width='10' height='8' viewBox='0 0 10 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.44558 0.255056C8.61838 0.089653 8.84834 -0.00178848 9.08693 2.65108e-05C9.32551 0.0018415 9.55407 0.0967713 9.72436 0.264784C9.89466 0.432797 9.99337 0.660752 9.99968 0.900549C10.006 1.14034 9.91939 1.37323 9.75816 1.55005L4.86357 7.70436C4.7794 7.79551 4.67782 7.86865 4.5649 7.91942C4.45198 7.97018 4.33003 7.99754 4.20636 7.99984C4.08268 8.00214 3.95981 7.97935 3.8451 7.93282C3.73038 7.88629 3.62618 7.81698 3.53872 7.72903L0.292827 4.46564C0.202435 4.38096 0.129933 4.27884 0.0796475 4.16537C0.0293621 4.05191 0.00232279 3.92942 0.000143182 3.80522C-0.00203643 3.68102 0.0206883 3.55765 0.0669613 3.44248C0.113234 3.3273 0.182108 3.22267 0.269473 3.13483C0.356838 3.047 0.460905 2.97775 0.575465 2.93123C0.690026 2.88471 0.812734 2.86186 0.936267 2.86405C1.0598 2.86624 1.18163 2.89343 1.29449 2.94398C1.40734 2.99454 1.50892 3.06743 1.59315 3.15831L4.16189 5.73967L8.42227 0.28219C8.42994 0.272694 8.43813 0.263635 8.4468 0.255056H8.44558Z' fill='%23F4F4FD'/%3E%3C/svg%3E");
+
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 0;
+
+    transition: background-color var(--anim-fast), border-color var(--anim-fast),
+        background-size var(--anim-fast) 250ms;
+    cursor: pointer;
+}
+
+.modal-form-agreement-box:checked {
+    background-color: var(--main-svg-cl);
+    border-color: var(--secondary-bg-cl);
+    background-size: 10px;
+
+    transition-delay: 250ms;
+}
+
+.modal-form-agreement-text {
+    font-size: 14px;
+}
+
+.modal-form-agreement-link {
+    color: var(--accent-txt-cl);
+}
+
+.modal-btn {
+    display: block;
+    margin: 0 auto;
+
+    width: 150px;
+    height: 35px;
+    border: 1px solid rgb(89, 141, 102);
+
+    font-size: 20px;
+    font-weight: 100;
+    line-height: 1.2;
+    background-color: transparent;
+    color: var(--accent-txt-cl);
+
+    transition: background-color 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94), color 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.modal-btn:hover {
+    background-color: rgb(89, 141, 102);
+    color: rgb(244, 246, 245);
+}
+
+.modal-btn:focus {
+    background-color: rgb(212, 232, 217);
+    border: 1px solid rgb(89, 141, 102);
+    color: rgb(89, 141, 102);
+}
